--- a/templates/rdv.html
+++ b/templates/rdv.html
@@ -80,7 +80,7 @@
                 
                 <div class="appointment-details">
                     <div class="doctor-info">
-                        <img src="/doctor_profile.png" alt="Photo du médecin" class="doctor-small-img">
+                        <img src="../static/images/doctor_profile2.png" alt="Photo du médecin" class="doctor-small-img">
                         <div>
                             <h3>Dr. Thomas </h3>
                             <p class="specialty">Cardiologue</p>
@@ -115,7 +115,7 @@
                 
                 <div class="appointment-details">
                     <div class="doctor-info">
-                        <img src="/doctor_profile.png" alt="Photo du médecin" class="doctor-small-img">
+                        <img src="../static/images/doctor_profile_image2.png" alt="Photo du médecin" class="doctor-small-img">
                         <div>
                             <h3>Dr. Marie </h3>
                             <p class="specialty">Pédiatre</p>
@@ -149,7 +149,7 @@
                 
                 <div class="appointment-details">
                     <div class="doctor-info">
-                        <img src="/doctor_profile.png" alt="Photo du médecin" class="doctor-small-img">
+                        <img src="../static/images/doctor_profile2.png" alt="Photo du médecin" class="doctor-small-img">
                         <div>
                             <h3>Dr.Martine</h3>
                             <p class="specialty">Médecin généraliste</p>
