ajout de pages + autres

--- a/templates/acceuil.html
+++ b/templates/acceuil.html
@@ -94,7 +94,7 @@
 
             <div class="doctor-card">
                 <div class="doctor-image">
-                    <img src="" alt="Dr. Philippe Moreau">
+                    <img src="#" alt="Dr. Philippe Moreau">
                 </div>
                 <div class="doctor-info">
                     <h2 class="doctor-name">Dr. Philippe Moreau</h2>
