--- a/templates/profil.html
+++ b/templates/profil.html
@@ -91,8 +91,9 @@
             </div>
             
             <div class="button-container">
-                <button class="profile-button">Prendre un rendez-vous</button>
-                <button class="profile-button edit-button">Éditer le profil</button>
+                <a href="./acceuil.html"><button class="btn-profile">prendre un rendez-vous</button></a>
+                <a href="./editer_profil.html"><button class="btn-profile">editer le profil</button></a>
+
             </div>
         </div>
     </div>
