ajout de page de prise de rendez vous

--- a/templates/medecin.html
+++ b/templates/medecin.html
@@ -47,9 +47,11 @@
         </div>
 
         <div class="doctor-profile-actions">
-            <button class="btn-appointment primary-btn">
+            <a href="../templates/prdv.html">
+                <button class="btn-appointment primary-btn">
                 <i class="far fa-calendar-plus"></i> Prendre rendez-vous
             </button>
+            </a>
         </div>
 
         <div class="doctor-profile-tabs">
