retravaillement sur les liens de prisede rendez vous coter acceuil

--- a/templates/acceuil.html
+++ b/templates/acceuil.html
@@ -52,7 +52,7 @@
                         Disponible: Aujourd'hui
                     </div>
                     <div class="doctor-actions">
-                        <a href="./rdv.html"><button class="btn-appointment">Prendre rendez-vous</button></a>
+                        <a href="./prdv.html"><button class="btn-appointment">Prendre rendez-vous</button></a>
                         <a href="./medecin.html"><button class="btn-profile">Voir profil</button></a>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
                         Disponible: Demain
                     </div>
                     <div class="doctor-actions">
-                        <a href="./rdv.html"><button class="btn-appointment">Prendre rendez-vous</button></a>
+                        <a href="./prdv.html"><button class="btn-appointment">Prendre rendez-vous</button></a>
                         <a href="./medecin.html"><button class="btn-profile">Voir profil</button></a>
                     </div>
                 </div>
@@ -86,7 +86,7 @@
                         Disponible: Vendredi
                     </div>
                     <div class="doctor-actions">
-                        <a href="./rdv.html"><button class="btn-appointment">Prendre rendez-vous</button></a>
+                        <a href="./prdv.html"><button class="btn-appointment">Prendre rendez-vous</button></a>
                         <a href="./medecin.html"><button class="btn-profile">Voir profil</button></a>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
                         Peu disponible: Lundi prochain
                     </div>
                     <div class="doctor-actions">
-                        <a href="./rdv.html"><button class="btn-appointment">Prendre rendez-vous</button></a>
+                        <a href="./prdv.html"><button class="btn-appointment">Prendre rendez-vous</button></a>
                         <a href="./medecin.html"><button class="btn-profile">Voir profil</button></a>
                     </div>
                 </div>
