amelioration des pages

--- a/templates/acceuil.html
+++ b/templates/acceuil.html
@@ -43,7 +43,7 @@
         <div class="doctors-list" id="doctors-list">
             <div class="doctor-card">
                 <div class="doctor-image">
-                    <img src="#" alt="Dr. Martine">
+                    <img src="../static/images/doctor_profile_image2.png" alt="Dr. Martine">
                 </div>
                 <div class="doctor-info">
                     <h2 class="doctor-name">Dr. Martine</h2>
