--- a/templates/profil.html
+++ b/templates/profil.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -15,6 +16,7 @@
                 <a href="./medecin.html">Médecins</a>
                 <a href="./rdv.html">Mes rendez-vous</a>
                 <a href="./profil.html">Profil</a>
+                <a href="./login.html" class="logout-btn">Se déconnecter</a>
             </div>
         </nav>
     </header>
@@ -51,6 +53,10 @@
                     <div class="detail-row">
                         <span class="detail-label">Adresse:</span>
                         <span class="detail-value">15 Rue de la Paix, CI</span>
+                    </div>
+                    <div class="detail-row">
+                        <span class="detail-label">Email:</span>
+                        <span class="detail-value">marie.petit@email.com</span>
                     </div>
                 </div>
                 
@@ -91,9 +97,9 @@
             </div>
             
             <div class="button-container">
-                <a href="./acceuil.html"><button class="btn-profile">prendre un rendez-vous</button></a>
-                <a href="./editer_profil.html"><button class="btn-profile">editer le profil</button></a>
-
+                <a href="./acceuil.html"><button class="btn-profile">Prendre un rendez-vous</button></a>
+                <a href="./editer_profil.html"><button class="btn-profile">Éditer le profil</button></a>
+                <a href="../templates/deconnexion_reussit.html"><button class="btn-profile btn-logout">Se déconnecter</button></a>
             </div>
         </div>
     </div>
